# cppXXdojo

./: .gitignore  CMakeLists.txt  README.MD  utils.h
0600-0799-general-utilities-library/0608-cxx11-tie/: case01.cpp
0600-0799-general-utilities-library/0620-cxx17-optional-any-variant/: case01-optional.cpp  case02-any.cpp
0600-general-utilities-library/0602-cxx11-pair-tuple/: case01-pair-tuple.cpp
0600-general-utilities-library/0610-cxx17-optional-any-variant/: case03-variant.cpp
0600-general-utilities-library/0620-cxx17-optional-any-variant/: case02-any.cpp
0800-cxx17-declaration-structured-binding/: case01.cpp
0920-cxx11-thread/: case01.cpp
0921-cxx20-jthread/: case01.cpp
0950-cxx11-bind/: case01.cpp
1000-promise-future/: case01.cpp
1001-cxx11-packaged-tasks/: case01.cpp
1001-packaged-tasks/: case01.cpp
1050-cxx11-async-launch/: case01.cpp
2000-cxx20-concepts/: case01-basics.cpp
2020-cxx20-ranges/: case01-basics.cpp
2050-cxx20-modules/: module_a.cpp
src/cpp11/async-launch/: case01.cpp
src/cpp11/packaged-tasks/: case01.cpp
src/cpp11/promise-future/: case01.cpp
src/cpp11/thread/: case01.cpp
src/cpp17/declaration-structured-binding/: case01.cpp
src/cpp17/optional-any-variant/: case01-optional.cpp  case03-variant.cpp
src/cpp20/concepts/: case01-basics.cpp
src/cpp20/jthread/: case01.cpp
src/cpp20/modules/: case01-basics.cpp
src/cpp20/modules/basic/: case01-basics.cpp  module_a.cpp
src/cpp20/modules/global_and_private_fragment/: module_with_global_fragment.cpp  module_with_private_fragment.cpp
src/cpp20/modules/nested/: case01-basics.cpp  module_exported_inner.cpp  module_hidden_inner.cpp  module_outer.cpp
src/cpp20/modules/partitions/: case01-basics.cpp  module-A-B.cpp  module-A-C.cpp  module-A.cpp
src/cpp20/ranges/: case01-basics.cpp  case02-creation.cpp  case03-adaptors.cpp  case04-concepts.cpp  case05-custom-view.cpp  utils.h
tasks-promise/: main.cpp
